--- a/src/containers/TopbarContainer/Topbar/TopbarDesktop/TopbarDesktop.module.css
+++ b/src/containers/TopbarContainer/Topbar/TopbarDesktop/TopbarDesktop.module.css
@@ -17,7 +17,7 @@
   background-color: var(--colorWhite);
 
   /* shadows */
-  box-shadow: var(--boxShadowLight);
+  box-shadow: none;
 
   @media (--viewportLarge) {
     padding: 0 24px 0 0;
@@ -28,6 +28,9 @@
 .logoLink {
   border-bottom: 0px solid;
   transition: var(--transitionStyleButton);
+  /* Increase size */
+  width: 120px; /* Example size - adjust as needed */
+  height: auto; /* Maintain aspect ratio */
 }
 .logoLink:hover {
   border-bottom: 4px solid var(--marketplaceColor);
@@ -389,7 +392,7 @@
   height: var(--topbarHeightDesktop);
   padding: 0 24px;
   background-color: var(--colorWhite);
-  box-shadow: var(--boxShadowLight);
+  box-shadow: none;
 }
 
 .logoContainer {
