--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -184,8 +184,8 @@ body {
 
   text-rendering: optimizeSpeed;
   font-optical-sizing: auto;
-
-  background-color: var(--colorGrey50);
+  background-color: var(--colorWhite)
+  /*background-color: var(--colorGrey50);*/
 }
 
 ::selection {
