Fix - Fix booking panel logic

--- a/src/components/OrderPanel/BookingTimeForm/FieldDateAndTimeInput.module.css
+++ b/src/components/OrderPanel/BookingTimeForm/FieldDateAndTimeInput.module.css
@@ -57,8 +57,14 @@
   flex-grow: 1;
 }
 
+.fieldTextInput {
+  flex-grow: 1;
+  margin-top: 24px;
+}
+
 .fieldSelect {
   flex-grow: 1;
+  margin-top: 24px;
 
   &::after {
     content: '';
